[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tool-mock-registry"
version = "0.1.0"
description = "Mock tool registry for testing agent tool calls. Register mock implementations, call through the registry, verify call counts. Unit-test agent logic without hitting real tool endpoints. Zero runtime deps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "llm",
  "ai",
  "agents",
  "testing",
  "mock",
  "tool-calling",
  "unit-testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-mock-registry"
Issues = "https://github.com/MukundaKatta/tool-mock-registry/issues"
Source = "https://github.com/MukundaKatta/tool-mock-registry"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_mock_registry"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
